derive_tests/tests/compile_fail/len_no_args.stderr
error: unexpected end of input, expected nested attribute
 --> tests/compile_fail/len_no_args.rs:5:23
  |
5 |     #[validate(length())]
  |                       ^
